--- a/media.css
+++ b/media.css
@@ -52,7 +52,7 @@
         /* background-color: brown!important; */
     }
 }
-@media (min-width: 300px)and (max-width: 512px){
+@media (min-width: 420px)and (max-width: 512px){
     .about{
         flex-direction: column; 
     }
@@ -72,13 +72,23 @@
     .body{
         height: 95vh;
         width: 95%;
-        /* background-color: blue!important; */
+        background-color: blue!important;
     }
 }
 @media (min-width: 300px)and (max-width: 420px){
     .body{
         height: 110vh;
         width: 95%;
-        /* background-color: blue!important; */
+        background-color: blue!important;
+    }
+    .images{
+        margin-top: 70vh!important;
+        flex-direction: column;
+        width: 90%!important;
+        margin: auto;
+        margin-bottom: 50px;
+    }
+    .addy{
+        font-size: 8px!important;
     }
 }
