--- a/index.css
+++ b/index.css
@@ -37,12 +37,27 @@ ul{
     flex-direction: column;
     background-image: url(./images/Timeless\ by\ Davido.jpeg);
 }
-
+#clipboard-input{
+    width: 400px!important;
+}
+.clipboard {
+    position: relative;
+    height: 40px;
+    background-color: #f7f7f7;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 25px 10px;
+    display: flex;
+    align-items: center;
+    margin-top: 30px!important;
+    margin-bottom: 30px!important;
+}
 .addy{
     color: black;
     margin: auto;
-    font-size: 13px;
+    font-size: 20px;
     font-weight: bold;
+    width: 400px!important;
 }
 .body{
     width: 45%;
