--- a/index.css
+++ b/index.css
@@ -60,14 +60,16 @@ ul{
     width: 400px!important;
 }
 .body{
-    width: 45%;
+    margin-top: 15vh!important;
+    width: 75%;
     text-align: center;
     margin: auto;
     color: white;
     border-radius: 20px;
-    box-shadow: 2px 15px 15px 5px black;
-    height: 85vh;
+    box-shadow: 2px 6px 15px 5px blue;
+    height: 60vh!important;
     position: relative;
+    padding: 50px;
 }
 .join-us{
     position: absolute;
@@ -112,7 +114,7 @@ h5{
 } */
 .davido{
     font-size: 60px;
-    color: deepskyblue;
+    color: orange;
 }
 .community{
     color: #f0f0f0;
@@ -148,7 +150,7 @@ body{
     background-image: url(./images/Kate\ Light\ Gray\ Abstract\ Texture\ Backdrop\ for\ Photography.jpeg);
 }
 .footer{
-    background-image: url(./images/Davido\ _Nigerian\ Artist.jpeg);
+    background-image: url(./images/a9735983-217a-4337-ae10-b16b04692360.jpeg);
     height: 40vh;
     text-align: center;
     padding-top: 120px;
@@ -179,4 +181,7 @@ footer{
 .me{
     display: flex;
     justify-content: end;
+}
+.tokenomics{
+    margin-bottom: 12vh!important;
 }
