--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 .logo{
     height: 60px;
-    margin: 10px;
+    margin: 20px;
     border-radius: 50px;
     width: 60px;
     position: fixed;
@@ -39,6 +39,13 @@ ul{
 }
 #clipboard-input{
     width: 400px!important;
+}
+.clipboards{
+    background-color: black;
+    color: white;
+    padding: 5px;
+    border-radius: 10px;
+    box-shadow: 3px 2px 2px 0px blue;
 }
 .clipboard {
     position: relative;
@@ -178,7 +185,7 @@ footer{
     right: 0;
     position: fixed;
     font-size: 40px;
-    border-radius: 20px;
+    border-radius: 50px;
 }
 .me{
     display: flex;
@@ -187,9 +194,7 @@ footer{
 .tokenomics{
     margin-bottom: 12vh!important;
 }
-#donate{
-    background-color: black;
-}
+
 .donating{
     /* width: 60%!important; */
     position: absolute;
